Fixing baseURL to non-https

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: OpenEMR
-baseurl: https://www.open-emr.org/
+baseurl: http://www.open-emr.org/
 theme: openemr
 languageCode: en-us
 copyright: Robert Down
