--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ params:
   twitterCardType: summary
   intro: "true"
   headline: OpenEMR
-  description: Open source electronic medical record software
+  description: The world's leading open-source electronic medical record and practice management software.
   github: "https://github.com/openemr"
   linkedin: ""
   gplus: https://plus.google.com/106799034872780958301
@@ -38,7 +38,7 @@ params:
   author:
     name: OpenEMR
     twitter: openemr
-  demoUrl: http://open-emr.org/wiki/index.php/OpenEMR_Demo
+  demoUrl: demo
   downloadUrl: http://open-emr.org/wiki/index.php/OpenEMR_Downloads
 permainks:
   post: /:filename/
