removed the tags and categories nonsense

--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,8 @@ ignoreFiles:
   - _files%
   - _cache$
 taxonomies:
-  tag: tags
-  category: categories
+  tag: ""
+  category: ""
 params:
   # Required theme-specific variables
   twitterImage: /images/test.jpg
