--- a/themes/openemr/package.json
+++ b/themes/openemr/package.json
@@ -4,24 +4,14 @@
   "description": "OpenEMR Website",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack",
+    "dev": "set NODE_ENV=production && webpack --mode=production --watch"
   },
   "author": "Robert Down <robertdown@live.com>",
   "private": "true",
-  "devDependencies": {
-    "bootstrap": "^4.0.0-beta.2",
-    "css-loader": "^0.28.7",
-    "font-awesome": "^4.7.0",
-    "jquery": "3",
-    "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "^4.7.2",
-    "popper.js": "1.12",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "webpack": "4.4",
-    "webpack-cli": "^3.1.1"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "materialize-css": "^0.100.2"
+    "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0"
   }
 }
