remove 2014 cehrt, update admins, 1 typo

--- a/config.yaml
+++ b/config.yaml
@@ -40,5 +40,5 @@ params:
     twitter: openemr
   demoUrl: demo
   downloadUrl: https://www.open-emr.org/wiki/index.php/OpenEMR_Downloads
-permainks:
+permalinks:
   post: /:filename/
