--- a/themes/openemr/package.json
+++ b/themes/openemr/package.json
@@ -10,7 +10,8 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "@popperjs/core": "^2.11.2",
+    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0"
   }
 }
