Add a docker compose file to move the hugo server to docker to stabalize the generation process

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ jsconfig.json
 hugo*
 
 # Generated files at default location
-src/public/
-src/resources/_gen
+public/
+resources/_gen
 
 ### Node ###
 # Logs
