--- a/config.yaml
+++ b/config.yaml
@@ -36,7 +36,7 @@ menu:
       weight: 5
     - identifier: wiki
       name: Docs
-      url: /wiki
+      url: https://open-emr.org/wiki
       weight: 6
     - identifier: forum
       name: Forum
