Fix giving page

--- a/config.yaml
+++ b/config.yaml
@@ -104,6 +104,9 @@ params:
   dateFormat: Mon, Jan 2, 2006
   highlightJsUrl: ""
   highlightJsLocalUrl: ""
+  paypalID: UA3UDABCAUZ2S
+  githubSponser: openemr
+  openCollective: openemr
   author:
     name: OpenEMR
     twitter: openemr
