WIP to abstract the homepage

--- a/config.yaml
+++ b/config.yaml
@@ -9,9 +9,9 @@ enableGitInfo: true
 ignoreFiles:
   - _files%
   - _cache$
-taxonomies:
-  tag: ""
-  category: ""
+disableKinds:
+  - taxonomy
+  - term
 menu:
   main:
     - identifier: features
@@ -82,6 +82,11 @@ menu:
       params:
         anchorClass: 'btn btn-danger btn-sm mx-4'
 params:
+  # Confirmed params in theme
+  homepage:
+    show_recent_blogs: false
+    show_recent_lectures: false
+  # End Confirmed
   # Required theme-specific variables
   twitterImage: /images/test.jpg
   coverImageStyle: standard
