--- a/config.yaml
+++ b/config.yaml
@@ -143,7 +143,7 @@ menu:
     - identifier: onc
       name: Certification
       weight: 60
-      url: https://www.open-emr.org/wiki/index.php/OpenEMR_Wiki_Home_Page#Current_ONC_Ambulatory_EHR_Certification
+      url: https://www.open-emr.org/wiki/index.php/OpenEMR_Wiki_Home_Page#2015_ONC_Ambulatory_EHR_Certification
     - identifier: ack
       name: Acknowledgements
       weight: 70
@@ -153,7 +153,7 @@ menu:
       name: Developer Manuals
       weight: 10
       pre: '<i class="fa fa-book"></i>&nbsp;'
-      url: https://open-emr.org/wiki/index.php/OpenEMR_Development
+      url: https://open-emr.org/wiki/index.php/OpenEMR_Wiki_Home_Page#Developer_Manuals
     - identifier: issues
       name: Issues
       weight: 20
