chore(announcements): update opencore link

--- a/data/announcements.yml
+++ b/data/announcements.yml
@@ -1,5 +1,5 @@
 - title: <strong>New:</strong> Free, fully hosted OpenEMR for U.S.-based healthcare providers—no servers, no setup, no cost.
-  url: https://opencoreemr.com/?tab=pricing&utm_source=openemr&utm_medium=banner&utm_campaign=homepage
+  url: https://www.opencoreemr.com/?utm_source=referral&utm_medium=banner&utm_campaign=openemr_launch
   date: 2025-08-15
   linkText: Try it now →
   # icon: fa fa-announcement
