--- a/data/announcements.yml
+++ b/data/announcements.yml
@@ -1,5 +1,5 @@
-- title: <strong>New:</strong> Free, fully hosted OpenEMR for U.S.-based healthcare providers—no servers, no setup, no cost.
-  url: https://www.opencoreemr.com/?utm_source=referral&utm_medium=banner&utm_campaign=openemr_launch
-  date: 2025-08-15
-  linkText: Try it now →
+- title: <strong>New:</strong> Join Us in
+  url: https://www.zeffy.com/en-US/donation-form/donate-to-onc--2026
+  date: 2025-10-31
+  linkText: Funding OpenEMR's 2025 CertificationJoin Us and Contribute Now →
   # icon: fa fa-announcement
