--- a/data/announcements.yml
+++ b/data/announcements.yml
@@ -1,7 +1,7 @@
-- title: <strong>New:</strong> Fund OpenEMR Certification Together
-  url: https://www.zeffy.com/en-US/donation-form/donate-to-onc--2026
-  date: 2025-10-31
-  linkText: Contribute Now →
+- title: <strong>New:</strong> Announcing OpenEMR Version 8
+  url: https://www.open-emr.org/blog/openemr-version-8-released/
+  date: 2026-02-13
+  linkText: 💃🕺→
   
 - title: <strong>New:</strong> Free, fully hosted OpenEMR for U.S.-based healthcare providers—no servers, no setup, no cost.
   url: https://www.opencoreemr.com/?utm_source=referral&utm_medium=banner&utm_campaign=openemr_launch
