--- a/data/announcements.yml
+++ b/data/announcements.yml
@@ -1,5 +1,5 @@
 - title: <strong>New:</strong> Announcing OpenEMR Version 8
-  url: https://www.open-emr.org/blog/openemr-version-8-released/
+  url: blog/openemr-version-8-released/
   date: 2026-02-13
   linkText: 💃🕺→
   
